# app/business/system/systemController/sysProfile.go
@@ -16,12 +16,28 @@ func NewProfile(us *systemServiceImpl.UserService) *Profile {
 	return &Profile{us: us}
 }
 
+// Profile 查看个人资料
+// @Summary 查看个人资料
+// @Description 查看个人资料
+// @Tags 个人资料
+// @Security BearerAuth
+// @Produce application/json
+// @Success 200 {object}  response.ResponseData{data=systemModels.UserProfile} "成功"
+// @Router /system/user/profile  [get]
 func (pc *Profile) Profile(c *gin.Context) {
 	baizeContext.SuccessData(c, pc.us.GetUserProfile(c))
 }
 
+// ProfileUpdateProfile 修改个人资料
+// @Summary 修改个人资料
+// @Description 修改个人资料
+// @Tags 个人资料
+// @Param  object body systemModels.SysUserDML true "公司信息"
+// @Security BearerAuth
+// @Produce application/json
+// @Success 200 {object}  response.ResponseData "成功"
+// @Router /system/user/profile  [put]
 func (pc *Profile) ProfileUpdateProfile(c *gin.Context) {
-
 	sysUser := new(systemModels.SysUserDML)
 	sysUser.UserId = baizeContext.GetUserId(c)
 	_ = c.ShouldBindJSON(sysUser)
@@ -29,7 +45,6 @@ func (pc *Profile) ProfileUpdateProfile(c *gin.Context) {
 		baizeContext.Waring(c, "修改失败'"+sysUser.Phonenumber+"'失败，手机号码已存在")
 		return
 	}
-
 	if pc.us.CheckEmailUnique(c, sysUser.UserId, sysUser.Email) {
 		baizeContext.Waring(c, "修改失败'"+sysUser.Email+"'失败，邮箱账号已存在")
 		return
@@ -39,6 +54,16 @@ func (pc *Profile) ProfileUpdateProfile(c *gin.Context) {
 	baizeContext.Success(c)
 }
 
+// ProfileUpdatePwd 修改密码
+// @Summary 修改密码
+// @Description 修改密码
+// @Tags 个人资料
+// @Param  oldPassword query string true "旧密码"
+// @Param  newPassword query string true "新密码"
+// @Security BearerAuth
+// @Produce application/json
+// @Success 200 {object}  response.ResponseData "成功"
+// @Router /system/user/profile/updatePwd  [put]
 func (pc *Profile) ProfileUpdatePwd(c *gin.Context) {
 	oldPassword := c.Query("oldPassword")
 	password := c.Query("newPassword")
@@ -55,6 +80,16 @@ func (pc *Profile) ProfileUpdatePwd(c *gin.Context) {
 	baizeContext.Success(c)
 }
 
+// ProfileAvatar 修改头像
+// @Summary 修改头像
+// @Description 修改头像
+// @Tags 个人资料
+// @Accept multipart/form-data
+// @Param file formData file true "file"
+// @Security BearerAuth
+// @Produce application/json
+// @Success 200 {object}  response.ResponseData "成功"
+// @Router /system/user/profile/avatar  [post]
 func (pc *Profile) ProfileAvatar(c *gin.Context) {
 	file, err := c.FormFile("avatarfile")
 	if err != nil {
